--- a/index.html
+++ b/index.html
@@ -1,59 +1,146 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welkom!</title>
+  <title>Fancy Calculator</title>
+  <link rel="manifest" href="src/manifest.json">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #1e293b, #0f172a);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       margin: 0;
-      padding: 0;
-      background: #f4f4f9;
-      color: #333;
+    }
+
+    h1 {
       text-align: center;
+      margin-bottom: 20px;
+      font-weight: 600;
+      color: #38bdf8;
     }
-    header {
-      background: #4CAF50;
-      color: white;
-      padding: 20px 0;
+
+    .calculator {
+      background: #1e293b;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0px 10px 30px rgba(0,0,0,0.5);
+      width: 320px;
     }
-    main {
-      padding: 40px 20px;
-    }
-    button {
-      background: #4CAF50;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #45a049;
-    }
-    footer {
-      background: #333;
-      color: white;
-      padding: 10px 0;
-      position: fixed;
-      bottom: 0;
+
+    #calc {
       width: 100%;
+      height: 60px;
+      background: #0f172a;
+      border: none;
+      border-radius: 10px;
+      font-size: 24px;
+      color: #fff;
+      text-align: right;
+      padding: 10px;
+      margin-bottom: 20px;
+      box-sizing: border-box;
+    }
+
+    .buttons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+    }
+
+    .btn {
+      background: #334155;
+      border: none;
+      border-radius: 12px;
+      padding: 20px;
+      font-size: 18px;
+      color: white;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+    }
+
+    .btn:hover {
+      background: #475569;
+      transform: scale(1.05);
+    }
+
+    .btn:active {
+      background: #64748b;
+      transform: scale(0.95);
+    }
+
+    .btn-operator {
+      background: #2563eb;
+    }
+
+    .btn-operator:hover {
+      background: #1d4ed8;
+    }
+
+    .btn-equal {
+      background: #16a34a;
+      grid-column: span 2;
+    }
+
+    .btn-equal:hover {
+      background: #15803d;
+    }
+
+    .btn-clear {
+      background: #dc2626;
+      grid-column: span 2;
+    }
+
+    .btn-clear:hover {
+      background: #b91c1c;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Welkom op mijn website</h1>
-  </header>
-  <main>
-    <p>Dit is een simpele startpagina gemaakt met HTML en een beetje CSS.</p>
-    <button onclick="alert('Bedankt voor het klikken!')">Klik hier</button>
-  </main>
-  <footer>
-    <p>&copy; 2025 Mijn Website</p>
-  </footer>
+  <div class="calculator">
+    <h1>Fancy Calculator</h1>
+    <form name="form1">
+      <input id="calc" type="text" name="answer" readonly>
+      <div class="buttons">
+        <input type="button" value="7" class="btn" onclick="form1.answer.value += '7'">
+        <input type="button" value="8" class="btn" onclick="form1.answer.value += '8'">
+        <input type="button" value="9" class="btn" onclick="form1.answer.value += '9'">
+        <input type="button" value="/" class="btn btn-operator" onclick="form1.answer.value += '/'">
+
+        <input type="button" value="4" class="btn" onclick="form1.answer.value += '4'">
+        <input type="button" value="5" class="btn" onclick="form1.answer.value += '5'">
+        <input type="button" value="6" class="btn" onclick="form1.answer.value += '6'">
+        <input type="button" value="*" class="btn btn-operator" onclick="form1.answer.value += '*'">
+
+        <input type="button" value="1" class="btn" onclick="form1.answer.value += '1'">
+        <input type="button" value="2" class="btn" onclick="form1.answer.value += '2'">
+        <input type="button" value="3" class="btn" onclick="form1.answer.value += '3'">
+        <input type="button" value="-" class="btn btn-operator" onclick="form1.answer.value += '-'">
+
+        <input type="button" value="0" class="btn" onclick="form1.answer.value += '0'">
+        <input type="button" value="." class="btn" onclick="form1.answer.value += '.'">
+        <input type="button" value="+" class="btn btn-operator" onclick="form1.answer.value += '+'">
+
+        <input type="button" value="Clear" class="btn btn-clear" onclick="form1.answer.value = ''">
+        <input type="button" value="=" class="btn btn-equal" onclick="form1.answer.value = eval(form1.answer.value)">
+      </div>
+    </form>
+  </div>
+
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("./sw.js")
+        .then(ServiceWorkerRegistration => {
+          console.log("SW Registered", ServiceWorkerRegistration);
+        })
+        .catch(error => {
+          console.log("SW Registration failed", error);
+        });
+    }
+  </script>
 </body>
 </html>
-
